remove spurious accusation

--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -314,18 +314,10 @@ is equal to $\bullet$, and ...
 \end{quote}
 
 To save space, we elide the rest of the definition of equality for $\top$; what
-we have seen so far already suffices to bring to light two serious problems:
-
-\begin{enumerate}
-
-  \item The meaning explanation of \type\alpha\ is not obvious predicative,
-  since it depends upon the meaning of $M:\alpha$.
-
-  \item The definition of any type requires knowledge of the entire syntax of
-  the theory. The judgement \type\alpha\ may never be made evident in isolation,
-  but must be done with full understanding of all the other types and their definitions.
-
-\end{enumerate}
+we have seen so far already suffices to bring to light a serious problem: the
+definition of any type requires knowledge of the entire syntax of the theory.
+The judgement \type\alpha\ may never be made evident in isolation, but must be
+done with full understanding of all the other types and their definitions.
 
 Furthermore, to extend an existing theory with a new type, the definitions of
 every other type must be rewritten to account for the elimination forms of the
