--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -9,7 +9,7 @@ To start, we will consider the notion of a \emph{logical theory}; in my mind,
 it starts with a species (or set) of judgements that can be proposed, asserted,
 and (if they are evident) known.
 
-\section{Judgements of a Logical Theory}
+\section{Judgements of a logical theory}
 
 The basic forms of judgement for a logical theory will be \framebox{\isprop{P}} and
 \framebox{\istrue{P}}; and what is $P$? It is a member of the species of terms,
@@ -167,7 +167,7 @@ propositionhood), and may be written as an inference rule as follows:
   }
 \]
 
-\section{Judgements for Verifications}
+\section{Judgements for verifications}
 
 So far, we have given judgements which circumscribe what it means to be a
 proposition, and thence for each proposition, we have by definition a notion of
