--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -197,6 +197,12 @@ define an object of type \prf{P} to be an $\mathcal{L}$-derivation of
 \istrue{P}; beyond reflexivity, further definitional equalities can be added to
 reflect the harmony of introduction and elimination rules.
 
+Now, the definitions we have given for the types above are ``intuitively''
+correct, but they actually fail to satisfy the meaning explanation that we have
+given for \type\alpha, because they do not take into account neutral terms. In
+the following sections, we will investigate this problem in more detail and
+propose a solution.
+
 \subsection{What is an ``object''?}
 It is time to revisit what it means to be an ``object'' of a type in the
 proof-theoretic type theory; we must note how this will necessarily differ from
