--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -6,7 +6,7 @@
 \chapter{Logical Theories}
 
 To start, we will consider the notion of a \emph{logical theory}; in my mind,
-it starts with a species (or set) of judgements that can be proposed, asserted,
+it begins with a species (or set) of judgements that can be proposed, asserted,
 and (if they are evident) known.
 
 \section{Judgements of a logical theory}
@@ -19,23 +19,26 @@ $\isprop{P}$ evident for a proposition $P$.
 To each judgement is assigned a \emph{meaning explanation}, which explicates
 the knowledge-theoretic content of the judgement. For a judgement
 $\mathcal{J}$, a meaning explanation should be in the form:
+
 \begin{quote}
   To know $\mathcal{J}$ is to know...
 \end{quote}
 
 The meaning of the judgement \isprop{P} is, then, as follows:
+
 \begin{quote}
   To know \isprop{P} is to know that $P$ is a proposition, which is to know
   what counts as a direct verification of $P$.
 \end{quote}
 
 So if a symbol $P$ is taken to denote a proposition, we must know \emph{what
-sort of thing} is to be taken as a direct verification of $P$, and this is by
-definition. A ``direct verification'' is understood in constrast with an
-``indirect verification'', which is to be thought of as a means or plan for
-verifying the proposition. Now, the judgement \istrue{P} is only meaningful in
-case we know \isprop{P} (this is called a presupposition). Then the meaning of
-\istrue{P} is as follows:
+sort of thing} is to be taken as a direct verification of $P$, and this is
+understood as part of the definition of $P$. A ``direct verification'' is
+understood in constrast with an ``indirect verification'', which is to be
+thought of as a means or plan for verifying the proposition. Now, the judgement
+\istrue{P} is only meaningful in case we know \isprop{P} (this is called a
+presupposition). Then the meaning of \istrue{P} is as follows:
+
 \begin{quote}
   To know \istrue{P} is to have a verification of $P$.
 \end{quote}
@@ -44,14 +47,14 @@ From the (implicit) presupposition \isprop{P}, we already know what counts as a
 verification, so the meaning explanation is well-defined. Note that it is the
 same to have a means or plan for verifying $P$ as to have a (direct)
 verification; this follows from the fact that one may put into action a plan
-for verifying $P$ and get out such a verification, and likewise, it is possible
-to propound a plan of verification by appealing to an existing verification.
+for verifying $P$ and achieve such a verification, and likewise, it is possible
+to propound a plan of verification by appeal to an existing verification.
 
 The judgements we have described so far are ``categorical'' in the sense that
 they are made without assumption. We will need to define a further form of
 judgement, which is called ``hypothetical'', and this is the judgement under
-hypothesis \framebox{\hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}}. And
-its meaning explanation is as follows:
+hypothesis \framebox{\hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}}.Its
+meaning explanation is as follows:
 
 \begin{quote}
   To know the judgement \hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n} is to know the
@@ -64,11 +67,11 @@ its meaning explanation is as follows:
 Now that we have propounded and explained the minimal system of judgements for
 a logical theory, let us populate it with propositions. First, we have falsity
 $\bot$, and we wish to make \isprop{\bot} evident; to do this, we simply state
-what counts as a direct verification of $\bot$, which is that there can be no
+what counts as a direct verification of $\bot$, which is that there is no
 direct verification of $\bot$.
 
-The next basic proposition is trivially true $\top$, and to make \isprop{\top}
-evident, we state that a direct verification of $\top$ is trivial. The meaning
+The next basic proposition is trivial truth $\top$, and to make \isprop{\top}
+evident, we state that a direct verification of $\top$ is trivial. The definition
 of $\top$ thus validates the judgement \istrue{\top}.
 
 Next, let us define conjunction; in doing so, we will make evident the
@@ -149,16 +152,17 @@ following explanation:
   counts as a direct verification of $Q$.
 \end{quote}
 
-(Note that unless \istrue{P}, it need not be evident that \isprop{Q}.) Now, if
+(Note that unless \istrue{P}, it need not be evident that \isprop{Q}.) If
 this judgement is going to be made evident, then we must indeed come up with
 what should count as a direct verification of $P\supset Q$ under the
 assumptions described above.
 
-And so to have a direct verification of $P\supset Q$ is to have a
-verification of $Q$ assuming that one has one of $P$; this is the meaning of
-implication, and it validates the judgement \hyp{\istrue{P\supset
-Q}}{\hyp{\istrue{Q}}{\istrue{P}}} (elliding the hypothesis for
-propositionhood), and may be written as an inference rule as follows:
+And so to have a direct verification of $P\supset Q$ is to have a verification
+of $Q$ assuming that one has one of $P$; this is the meaning of implication,
+and it validates the judgement \hyp{\istrue{P\supset
+Q}}{\hyp{\istrue{Q}}{\istrue{P}}} , and may be written as an inference rule as
+follows:
+%
 \[
   \infer{
     \istrue{P\supset Q}
@@ -169,17 +173,17 @@ propositionhood), and may be written as an inference rule as follows:
 
 \section{Judgements for verifications}
 
-So far, we have given judgements which circumscribe what it means to be a
+So far, we have given judgements which define what it means to be a
 proposition, and thence for each proposition, we have by definition a notion of
 what should count as a verification of that proposition. And by definition, to
-assert the judgement \istrue{P} is to assert that one has a verification of $P$,
-but we have not considered any judgements which actually describe such
-verifications.
+assert the judgement \istrue{P} is to assert that one has a verification of
+$P$, but we have not considered any judgements which actually deal with such
+verifications directly.
 
 It is a hallmark of Martin-L\"of's program to resolve the contradiction between
 syntax and semantics not by choosing symbols over meanings or meanings over
 symbols, but by endowing symbols with meaning in the course of knowing the
-evident judgements. As such $P$ is a symbol, but when we assert \isprop{P} we
+evident judgements. As such, $P$ is a symbol, but when we assert \isprop{P} we
 are saying that we know what proposition $P$ denotes.
 
 A similar thing can be done with verifications themselves, by placing them in
@@ -205,12 +209,14 @@ call ``canonical'') from \emph{indirect verifications} (which we will call
 ``non-canonical''). So the domain of expressions must itself be accorded with a
 notion of reduction to canonical form, and this corresponds with putting into
 action a plan of verification in order to get an actual verification.
+
 \begin{quote}
   To know \reduce{M}{M'} is to know that $M$ is an expression which reduces to
   a canonical form $M'$.
 \end{quote}
 
-Now, we can rewrite the previous meaning explanation as follows:
+Now, we can correct the previous meaning explanation as follows:
+
 \begin{quote}
   To know \ver{M}{P} is to know an $M'$ such that \reduce{M}{M'} and $M'$ is a
   canonical (direct) verification of $P$.
@@ -218,11 +224,16 @@ Now, we can rewrite the previous meaning explanation as follows:
 
 The meaning explanation for \isprop{P} must be accordingly modified to take
 into account the computational behavior of the expression domain:
+
 \begin{quote}
   To know \isprop{P} is to know a $P'$ such that \reduce{P}{P'} and $P'$ is a
   canonical proposition, which is to say, that one knows what counts as a
   canonical verification for $P'$.
 \end{quote}
+
+In practice, when it is clear that $P$ is canonical, then we will simply say,
+``To know \isprop{P} is to know what counts as a canonical verification of
+$P$''.
 
 As an example, then, we will update the evidence of the assertion
 \hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}}. The meaning
