--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,7 @@
 \newcommand\isprop[1]{\ensuremath{#1\;\mathit{prop}}}
 \newcommand\istrue[1]{\ensuremath{#1\;\mathit{true}}}
 \newcommand\hyp[2]{\ensuremath{#1\ (#2)}}
+\newcommand\genj[2]{\ensuremath{\lvert_{#1}\,#2}}
 \newcommand\ver[2]{\ensuremath{#1\in#2}}
 \newcommand\reduce[2]{\ensuremath{#1\Rightarrow#2}}
 \newcommand\naturals{\ensuremath{\mathbb{N}}}
