--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,10 @@
 \numberwithin{equation}{section}
 
 \newcommand\isprop[1]{\ensuremath{#1\;\mathit{prop}}}
+\newcommand\isset[1]{\ensuremath{#1\;\mathit{type}}}
 \newcommand\istrue[1]{\ensuremath{#1\;\mathit{true}}}
+\newcommand\isctx[1]{\ensuremath{#1\;\mathit{ctx}}}
+\newcommand\fresh[2]{\ensuremath{#1\mathrel{\#}#2}}
 \newcommand\hyp[2]{\ensuremath{#1\ (#2)}}
 \newcommand\genj[2]{\ensuremath{\lvert_{#1}\,#2}}
 \newcommand\ver[2]{\ensuremath{#1\in#2}}
@@ -71,6 +74,7 @@ explanations for computational and intensional type theories.}
 \tableofcontents
 
 \subfile{logicaltheory}
+\subfile{ctt}
 \subfile{prooftheory}
 
 \end{document}
