Define the unit type

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \newcommand\istrue[1]{\ensuremath{#1\;\mathit{true}}}
 \newcommand\isctx[1]{\ensuremath{#1\;\mathit{ctx}}}
 \newcommand\fresh[2]{\ensuremath{#1\mathrel{\#}#2}}
-\newcommand\chyp[2]{\ensuremath{#1\gg#2}}
+\newcommand\sequent[2]{\ensuremath{#1\gg#2}}
 \newcommand\hyp[2]{\ensuremath{#1\ (#2)}}
 \newcommand\genj[2]{\ensuremath{\lvert_{#1}\,#2}}
 \newcommand\ver[2]{\ensuremath{#1\in#2}}
