--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 \newcommand\genj[2]{\ensuremath{\lvert_{#1}\,#2}}
 \newcommand\ver[2]{\ensuremath{#1\in#2}}
 \newcommand\reduce[2]{\ensuremath{#1\Rightarrow#2}}
+\newcommand\areduce[2]{\ensuremath{#1&\Rightarrow#2}}
 \newcommand\naturals{\ensuremath{\mathbb{N}}}
 \newcommand\suc[1]{\ensuremath{\mathsf{S}(#1)}}
 \newcommand\natrec[3]{\ensuremath{\mathsf{rec}_\naturals(#1;#2;#3)}}
@@ -46,6 +47,10 @@
 \newcommand\fst[1]{\ensuremath{\mathsf{fst}(#1)}}
 \newcommand\snd[1]{\ensuremath{\mathsf{snd}(#1)}}
 \newcommand\abort[2]{\ensuremath{\mathsf{abort}(#1;#2)}}
+
+\newcommand\tyunit{\ensuremath{\mathsf{unit}}}
+\newcommand\tyvoid{\ensuremath{\mathsf{void}}}
+\newcommand\magic[1]{\ensuremath{\mathsf{abort}(#1)}}
 
 \begin{document}
 \title{Type theory and its meaning explanations}
