--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,9 @@
 
 \newcommand\tyunit{\ensuremath{\mathsf{unit}}}
 \newcommand\tyvoid{\ensuremath{\mathsf{void}}}
-\newcommand\magic[1]{\ensuremath{\mathsf{abort}(#1)}}
+\newcommand\typrod[3]{\ensuremath{\mathsf{\Pi}(#1;#2.#3)}}
+\newcommand\lam[2]{\ensuremath{\mathsf{\lambda}(#1.#2)}}
+\newcommand\ap[2]{\ensuremath{\mathsf{ap}(#1;#2)}}
 
 \begin{document}
 \title{Type theory and its meaning explanations}
