--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -83,15 +83,15 @@ tightly of all the other notations we have considered.
 
 \subsection{Hypothetico-general judgement}
 
-When hypothetical judgment is used inside general judgement (as in
+When hypothetical judgment is used inside general judgement, as in
 \genj{x}{\hyp{\istrue{A(x)}}{\istrue{B(x)}}}, we term the whole thing a
 ``hypothetico-general'' judgement. One thing bears clarifying, which is, why do
 we write \hyp{\istrue{P}}{\istrue{P}} rather than
 \genj{P}{\hyp{\istrue{P}}{\istrue{P}}}?
 
-The former is formally not a single judgement, but rather a \emph{scheme} for
+The former is properly not a single judgement, but rather a \emph{scheme} for
 judgements, where $P$ and $Q$ are intended to be replaced with concrete
-expressions by the person making use of the inference. On the other hand, the
+expressions by the person making asserting the judgements. On the other hand, the
 latter is itself a single judgement which may be asserted all on its own.
 
 \section{Propositions and verifications}
